# HomeSystem

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATABASE_SETUP.md  FAQ.md  LICENSE  README.md  analyze_vlas_paper.py  check-ports.sh  debug_clear_arxiv_data.py  debug_show_arxiv_data.py  docker-compose.yml  leader.md  package-lock.json  planing.md  pyproject.toml  quick_analyze_vlas.py  quick_test.py  requirements.txt  test_config_loading_fix.py  test_database_integration.py  test_deep_paper_analysis.py  test_paper_gather_fix.py  test_relevance_api.py
.github/workflows/: docker-build.yml
HomeSystem/ graph/: base_graph.py
HomeSystem/graph/: base_graph.py  chat_agent.py  deep_paper_analysis_agent.py  formula_correction_agent.py  llm_factory.py  llm_providers.yaml  mcp_manager.py  paper_analysis_agent.py  simple_formula_corrector.py  video_utils.py  vision_agent.py  vision_utils.py
HomeSystem/integrations/: __init__.py
HomeSystem/workflow/: __init__.py  engine.py  paper_gather_task.py  scheduler.py  task.py
Web/ExplorePaperData/: IMAGE_PATH_FIXES.md  README.md  app.py  config.py  database.py  migrate_image_paths.py  requirements.txt  start.sh  test_image_fixes.py
Web/PaperAnalysis/: .dockerignore  .env.example  .gitignore  Docker-README.md  Dockerfile  README.md  app.py  backup-data.sh  build.sh  (+10 more)
app/: paper_gather_task.py
database/: Dockerfile  README.md  backup.sh  check-tables.sh  docker-compose.yml  restore.sh  start.sh  stop.sh
deploy/: README.md  docker-compose.database.yml  docker-compose.ocr-gpu.yml  docker-compose.ocr.yml  docker-compose.web.yml  docker-compose.yml
docs/: README.md  arxiv-api-documentation.md  database-integration-guide.md  executor-shutdown-fix-guide.md  explore-paper-data-architecture.md  llm-integration-guide.md  lobe-chat-oidc-complete-guide.md  local-services-api.md  mcp-integration-guide.md  papergather-web-architecture.md  project-structure.md  siyuan-api-integration-guide.md  video-analysis-tool-integration-guide.md  video-link-detector-integration-guide.md  vision-integration-guide.md  workflow-framework-guide.md  youtube-downloader-integration-guide.md  zhipuai-integration-guide.md
examples/: arxiv_database_demo.py  arxiv_display_demo.py  chat_agent_example.py  database_usage_example.py  deep_paper_analysis_config_example.json  deep_paper_analysis_with_user_prompt.py  dify_knowledge_usage.py  formula_correction_example.py  llm_usage_example.py  math_formula_extractor_example.py  mcp_chat_agent_example.py  paddleocr_example.py  paper_analysis_example.py  paper_gather_config_example.py  quick_translation_test.py  remote_ocr_example.py  simple_arxiv_demo.py  simple_pix2text_test.py  siyuan_config_helper.py  siyuan_integration_example.py  siyuan_quick_test.py  test_deep_paper_analysis.py  test_pix2text_ocr.py  test_translation_comparison.py  text_chunk_indexer_usage.py  text_editor_agent_demo.py  update_ollama_models.py  video_analysis_example.py  video_link_detector_example.py  video_resource_processor_example.py  vision_example.py  workflow_example.py  youtube_downloader_example.py  zhipuai_integration_example.py
remote_app/: .gitignore  README.md  README_DOCKER.md  cleanup.sh  deploy.sh  docker-compose.yml  health-check.sh  scale.sh
scripts/: auto_generate_example.py
(+156 files in other folders)
